# pytest-chdir

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/pytest_chdir/: __init__.py  plugin.py
tests/: test_pytest_chdir.py
