[project]
name = "pytest-chdir"
version = "0.2.1"
description = "A pytest fixture for changing current working directory"
authors = [{name = "Reuben Thomas", email = "rrt@sc3d.org"}]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^9.1.0"

[tool.poetry.group.dev.dependencies]
pytest-datadir = "^1.8.0"
pre-commit = "^4.6.0"
pytest-mypy = "^1.0.1"
pytest-ruff = "^0.5.0"
pytest-cov = "^7.1.0"
bandit = "^1.9.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
line-length = 88
target-version = 'py311'
extend-exclude = [
  ".eggs",
  ".git",
  ".mypy_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
]

# the root of the project
[tool.poetry.plugins.pytest11]
pytest-chdir = "pytest_chdir.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
